# pathfinder

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
pathfinder/: __init__.py  cli.py  exceptions.py  image_manager.py  layout.py  node.py  pathfinder.py
pathfinder/scripts/: find_path.py
